# sfdl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  README.tpl
.github/: dependabot.yml
.github/workflows/: main.yml  release-plz.yml
examples/: decrypt.rs  decrypted.sfdl  encrypt.rs  encrypted.sfdl
src/: crypto.rs  error.rs  lib.rs  sfdl.rs
